<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="menu_discover_service">Discover Service</string>
    <string name="menu_discover_service_sync">Discover Service(Synchronous)</string>
    <string name="menu_request_mtu">Request MTU</string>
    <string name="menu_request_mtu_sync">Request MTU(Synchronous)</string>
    <string name="menu_read_phy">Read Phy</string>
    <string name="menu_read_phy_sync">Read Phy(Synchronous)</string>
    <string name="menu_set_preferred_phy">Set Preferred Phy</string>
    <string name="menu_set_preferred_phy_sync">Set Preferred Phy(Synchronous)</string>
    <string name="menu_read_remote_rssi">Read Remote Rssi</string>
    <string name="menu_read_remote_rssi_sync">Read Remote Rssi(Synchronous)</string>
    <string name="menu_read_characteristic">Read Characteristic</string>
    <string name="menu_write_characteristic">Write Characteristic</string>
    <string name="menu_read_descriptor">Read Descriptor</string>
    <string name="menu_write_notification">Write CCCD Notification</string>
    <string name="menu_write_indication">Write CCCD Indication</string>
    <string name="menu_write_notification_stop">Write CCCD Notification stop</string>
    <string name="menu_write_indication_stop">Write CCCD Indication stop</string>
    <string name="menu_read_characteristic_sync">Read Characteristic(Synchronous)</string>
    <string name="menu_write_characteristic_sync">Write Characteristic(Synchronous)</string>
    <string name="menu_write_characteristic_reliable">Write Characteristic(Reliable)</string>
    <string name="menu_write_characteristic_reliable_abort">Write Characteristic(Reliable abort)</string>
    <string name="menu_read_manufacturer_name">Read Manufacturer Name</string>
    <string name="menu_read_model_number">Read Model Number</string>
    <string name="menu_read_battery_level_1">Read Battery Level(1)</string>
    <string name="menu_read_battery_level_2">Read Battery Level(2)</string>
    <string name="menu_notify_battery_level_start">Notify Battery Level start</string>
    <string name="menu_notify_battery_level_stop">Notify Battery Level stop</string>
    <string name="menu_load_bonded_device">Load Bonded Device</string>
    <string name="menu_clear_bonded_history">Clear Bonded History</string>
    <string name="menu_read_ln_feature">Read LN Feature</string>
    <string name="menu_notify_location_and_speed_start">Notify Location and Speed start</string>
    <string name="menu_notify_location_and_speed_stop">Notify Location and Speed stop</string>
    <string name="menu_read_position_quality">Read Position Quality</string>
    <string name="menu_write_ln_control_point_1">Write LN Control Point(1)</string>
    <string name="menu_write_ln_control_point_2">Write LN Control Point(2)</string>
    <string name="menu_write_ln_control_point_3">Write LN Control Point(3)</string>
    <string name="menu_write_ln_control_point_4">Write LN Control Point(4)</string>
    <string name="menu_write_ln_control_point_5">Write LN Control Point(5)</string>
    <string name="menu_write_ln_control_point_6">Write LN Control Point(6)</string>
    <string name="menu_write_ln_control_point_7">Write LN Control Point(7)</string>
    <string name="menu_write_ln_control_point_8">Write LN Control Point(8)</string>
    <string name="menu_indicate_ln_control_point_start">Indicate LN Control Point start</string>
    <string name="menu_indicate_ln_control_point_stop">Indicate LN Control Point stop</string>
    <string name="menu_notify_navigation_start">Notify Navigation start</string>
    <string name="menu_notify_navigation_stop">Notify Navigation stop</string>
    <string name="menu_has_body_composition_service">Has Body Composition Service</string>
    <string name="menu_has_user_data_service">Has User Data Service</string>
    <string name="menu_has_battery_service">Has Battery Service</string>
    <string name="menu_has_current_time_service">Has Current Time Service</string>
    <string name="menu_read_current_time">Read Current Time</string>
    <string name="menu_is_current_time_writable">Is Current Time Writable</string>
    <string name="menu_write_current_time">Write Current Time</string>
    <string name="menu_notify_current_time_start">Notify Current Time start</string>
    <string name="menu_notify_current_time_stop">Notify Current Time stop</string>
    <string name="menu_has_local_time_information">Has Local Time Information</string>
    <string name="menu_read_local_time_information">Read Local Time Information</string>
    <string name="menu_is_local_time_information_writable">Is Local Time Information Writable</string>
    <string name="menu_write_local_time_information">Write Local Time Information</string>
    <string name="menu_has_reference_time_information">Has Reference Time Information</string>
    <string name="menu_read_reference_time_information">Read Reference Time Information</string>
    <string name="menu_read_supported_new_alert_category">Read Supported New Alert Category</string>
    <string name="menu_get_new_alert_client_characteristic_configuration">Read New Alert Client Characteristic Configuration</string>
    <string name="menu_start_new_alert_notification">Start New Alert Notification</string>
    <string name="menu_stop_new_alert_notification">Stop New Alert Notification</string>
    <string name="menu_read_supported_unread_alert_category">Read Supported Unread Alert Category</string>
    <string name="menu_get_unread_alert_status_client_characteristic_configuration">Read Unread Alert Status Client Characteristic Configuration</string>
    <string name="menu_start_unread_alert_status_notification">Start Unread Alert Status Notification</string>
    <string name="menu_stop_unread_alert_status_notification">Stop Unread Alert Status Notification</string>
    <string name="menu_enable_new_alert_simple_alert">Enable NA Simple Alert</string>
    <string name="menu_enable_new_alert_email">Enable NA EMail</string>
    <string name="menu_enable_new_alert_news">Enable NA News</string>
    <string name="menu_enable_new_alert_call">Enable NA Call</string>
    <string name="menu_enable_new_alert_missed_call">Enable NA Missed Call</string>
    <string name="menu_enable_new_alert_sms_mms">Enable NA Sms Mms</string>
    <string name="menu_enable_new_alert_voice_mail">Enable NA Voice Mail</string>
    <string name="menu_enable_new_alert_schedule">Enable NA Schedule</string>
    <string name="menu_enable_new_alert_high_prioritized">Enable NA High Prioritized</string>
    <string name="menu_enable_new_alert_instant_message">Enable NA Instant Message</string>
    <string name="menu_enable_new_alert_all">Enable NA All</string>
    <string name="menu_disable_new_alert_simple_alert">Disable NA Simple Alert</string>
    <string name="menu_disable_new_alert_email">Disable NA EMail</string>
    <string name="menu_disable_new_alert_news">Disable NA News</string>
    <string name="menu_disable_new_alert_call">Disable NA Call</string>
    <string name="menu_disable_new_alert_missed_call">Disable NA Missed Call</string>
    <string name="menu_disable_new_alert_sms_mms">Disable NA Sms Mms</string>
    <string name="menu_disable_new_alert_voice_mail">Disable NA Voice Mail</string>
    <string name="menu_disable_new_alert_schedule">Disable NA Schedule</string>
    <string name="menu_disable_new_alert_high_prioritized">Disable NA High Prioritized</string>
    <string name="menu_disable_new_alert_instant_message">Disable NA Instant Message</string>
    <string name="menu_disable_new_alert_all">Disable NA All</string>
    <string name="menu_enable_unread_alert_status_simple_alert">Enable UAS Simple Alert</string>
    <string name="menu_enable_unread_alert_status_email">Enable UAS EMail</string>
    <string name="menu_enable_unread_alert_status_news">Enable UAS News</string>
    <string name="menu_enable_unread_alert_status_call">Enable UAS Call</string>
    <string name="menu_enable_unread_alert_status_missed_call">Enable UAS Missed Call</string>
    <string name="menu_enable_unread_alert_status_sms_mms">Enable UAS Sms Mms</string>
    <string name="menu_enable_unread_alert_status_voice_mail">Enable UAS Voice Mail</string>
    <string name="menu_enable_unread_alert_status_schedule">Enable UAS Schedule</string>
    <string name="menu_enable_unread_alert_status_high_prioritized">Enable UAS High Prioritized</string>
    <string name="menu_enable_unread_alert_status_instant_message">Enable UAS Instant Message</string>
    <string name="menu_enable_unread_alert_status_all">Enable UAS All</string>
    <string name="menu_disable_unread_alert_status_simple_alert">Disable UAS Simple Alert</string>
    <string name="menu_disable_unread_alert_status_email">Disable UAS EMail</string>
    <string name="menu_disable_unread_alert_status_news">Disable UAS News</string>
    <string name="menu_disable_unread_alert_status_call">Disable UAS Call</string>
    <string name="menu_disable_unread_alert_status_missed_call">Disable UAS Missed Call</string>
    <string name="menu_disable_unread_alert_status_sms_mms">Disable UAS Sms Mms</string>
    <string name="menu_disable_unread_alert_status_voice_mail">Disable UAS Voice Mail</string>
    <string name="menu_disable_unread_alert_status_schedule">Disable UAS Schedule</string>
    <string name="menu_disable_unread_alert_status_high_prioritized">Disable UAS High Prioritized</string>
    <string name="menu_disable_unread_alert_status_instant_message">Disable UAS Instant Message</string>
    <string name="menu_disable_unread_alert_status_all">Disable UAS All</string>
    <string name="menu_notify_new_alert_simple_alert">Notify NA Simple Alert</string>
    <string name="menu_notify_new_alert_email">Notify NA EMail</string>
    <string name="menu_notify_new_alert_news">Notify NA News</string>
    <string name="menu_notify_new_alert_call">Notify NA Call</string>
    <string name="menu_notify_new_alert_missed_call">Notify NA Missed Call</string>
    <string name="menu_notify_new_alert_sms_mms">Notify NA Sms Mms</string>
    <string name="menu_notify_new_alert_voice_mail">Notify NA Voice Mail</string>
    <string name="menu_notify_new_alert_schedule">Notify NA Schedule</string>
    <string name="menu_notify_new_alert_high_prioritized">Notify NA High Prioritized</string>
    <string name="menu_notify_new_alert_instant_message">Notify NA Instant Message</string>
    <string name="menu_notify_new_alert_all">Notify NA All</string>
    <string name="menu_notify_unread_alert_status_simple_alert">Notify UAS Simple Alert</string>
    <string name="menu_notify_unread_alert_status_email">Notify UAS EMail</string>
    <string name="menu_notify_unread_alert_status_news">Notify UAS News</string>
    <string name="menu_notify_unread_alert_status_call">Notify UAS Call</string>
    <string name="menu_notify_unread_alert_status_missed_call">Notify UAS Missed Call</string>
    <string name="menu_notify_unread_alert_status_sms_mms">Notify UAS Sms Mms</string>
    <string name="menu_notify_unread_alert_status_voice_mail">Notify UAS Voice Mail</string>
    <string name="menu_notify_unread_alert_status_schedule">Notify UAS Schedule</string>
    <string name="menu_notify_unread_alert_status_high_prioritized">Notify UAS High Prioritized</string>
    <string name="menu_notify_unread_alert_status_instant_message">Notify UAS Instant Message</string>
    <string name="menu_notify_unread_alert_status_all">Notify UAS All</string>
    <string name="menu_has_next_dst_change_service">Has Next DST Change Service</string>
    <string name="menu_has_reference_time_update_service">Has Reference Time Update Service</string>
    <string name="menu_read_time_with_dst">Get Time with DST</string>
    <string name="menu_write_time_update_control_point">Set Time Update Control Point</string>
    <string name="menu_read_time_update_state">Get Time Update State</string>
    <string name="menu_clear">Clear</string>
</resources>