<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/pre_connected">
        <item
            android:id="@+id/load_bonded_device"
            android:title="@string/menu_load_bonded_device" />

        <item
            android:id="@+id/clear_bonded_history"
            android:title="@string/menu_clear_bonded_history" />
    </group>
    <group android:id="@+id/basic">
        <item
            android:id="@+id/read_supported_new_alert_category"
            android:title="@string/menu_read_supported_new_alert_category" />
        <item
            android:id="@+id/get_new_alert_client_characteristic_configuration"
            android:title="@string/menu_get_new_alert_client_characteristic_configuration" />
        <item
            android:id="@+id/start_new_alert_notification"
            android:title="@string/menu_start_new_alert_notification" />
        <item
            android:id="@+id/stop_new_alert_notification"
            android:title="@string/menu_stop_new_alert_notification" />
        <item
            android:id="@+id/read_supported_unread_alert_category"
            android:title="@string/menu_read_supported_unread_alert_category" />
        <item
            android:id="@+id/get_unread_alert_status_client_characteristic_configuration"
            android:title="@string/menu_get_unread_alert_status_client_characteristic_configuration" />
        <item
            android:id="@+id/start_unread_alert_status_notification"
            android:title="@string/menu_start_unread_alert_status_notification" />
        <item
            android:id="@+id/stop_unread_alert_status_notification"
            android:title="@string/menu_stop_unread_alert_status_notification" />
    </group>
    <group
        android:id="@+id/na"
        android:visible="true">
        <item
            android:id="@+id/enable_new_alert_simple_alert"
            android:title="@string/menu_enable_new_alert_simple_alert" />
        <item
            android:id="@+id/enable_new_alert_email"
            android:title="@string/menu_enable_new_alert_email" />
        <item
            android:id="@+id/enable_new_alert_news"
            android:title="@string/menu_enable_new_alert_news" />
        <item
            android:id="@+id/enable_new_alert_call"
            android:title="@string/menu_enable_new_alert_call" />
        <item
            android:id="@+id/enable_new_alert_missed_call"
            android:title="@string/menu_enable_new_alert_missed_call" />
        <item
            android:id="@+id/enable_new_alert_sms_mms"
            android:title="@string/menu_enable_new_alert_sms_mms" />
        <item
            android:id="@+id/enable_new_alert_voice_mail"
            android:title="@string/menu_enable_new_alert_voice_mail" />
        <item
            android:id="@+id/enable_new_alert_schedule"
            android:title="@string/menu_enable_new_alert_schedule" />
        <item
            android:id="@+id/enable_new_alert_high_prioritized"
            android:title="@string/menu_enable_new_alert_high_prioritized" />
        <item
            android:id="@+id/enable_new_alert_instant_message"
            android:title="@string/menu_enable_new_alert_instant_message" />
        <item
            android:id="@+id/enable_new_alert_all"
            android:title="@string/menu_enable_new_alert_all" />

        <item
            android:id="@+id/disable_new_alert_simple_alert"
            android:title="@string/menu_disable_new_alert_simple_alert" />
        <item
            android:id="@+id/disable_new_alert_email"
            android:title="@string/menu_disable_new_alert_email" />
        <item
            android:id="@+id/disable_new_alert_news"
            android:title="@string/menu_disable_new_alert_news" />
        <item
            android:id="@+id/disable_new_alert_call"
            android:title="@string/menu_disable_new_alert_call" />
        <item
            android:id="@+id/disable_new_alert_missed_call"
            android:title="@string/menu_disable_new_alert_missed_call" />
        <item
            android:id="@+id/disable_new_alert_sms_mms"
            android:title="@string/menu_disable_new_alert_sms_mms" />
        <item
            android:id="@+id/disable_new_alert_voice_mail"
            android:title="@string/menu_disable_new_alert_voice_mail" />
        <item
            android:id="@+id/disable_new_alert_schedule"
            android:title="@string/menu_disable_new_alert_schedule" />
        <item
            android:id="@+id/disable_new_alert_high_prioritized"
            android:title="@string/menu_disable_new_alert_high_prioritized" />
        <item
            android:id="@+id/disable_new_alert_instant_message"
            android:title="@string/menu_disable_new_alert_instant_message" />
        <item
            android:id="@+id/disable_new_alert_all"
            android:title="@string/menu_disable_new_alert_all" />
    </group>
    <group
        android:id="@+id/uas"
        android:visible="true">
        <item
            android:id="@+id/enable_unread_alert_status_simple_alert"
            android:title="@string/menu_enable_unread_alert_status_simple_alert" />
        <item
            android:id="@+id/enable_unread_alert_status_email"
            android:title="@string/menu_enable_unread_alert_status_email" />
        <item
            android:id="@+id/enable_unread_alert_status_news"
            android:title="@string/menu_enable_unread_alert_status_news" />
        <item
            android:id="@+id/enable_unread_alert_status_call"
            android:title="@string/menu_enable_unread_alert_status_call" />
        <item
            android:id="@+id/enable_unread_alert_status_missed_call"
            android:title="@string/menu_enable_unread_alert_status_missed_call" />
        <item
            android:id="@+id/enable_unread_alert_status_sms_mms"
            android:title="@string/menu_enable_unread_alert_status_sms_mms" />
        <item
            android:id="@+id/enable_unread_alert_status_voice_mail"
            android:title="@string/menu_enable_unread_alert_status_voice_mail" />
        <item
            android:id="@+id/enable_unread_alert_status_schedule"
            android:title="@string/menu_enable_unread_alert_status_schedule" />
        <item
            android:id="@+id/enable_unread_alert_status_high_prioritized"
            android:title="@string/menu_enable_unread_alert_status_high_prioritized" />
        <item
            android:id="@+id/enable_unread_alert_status_instant_message"
            android:title="@string/menu_enable_unread_alert_status_instant_message" />
        <item
            android:id="@+id/enable_unread_alert_status_all"
            android:title="@string/menu_enable_unread_alert_status_all" />

        <item
            android:id="@+id/disable_unread_alert_status_simple_alert"
            android:title="@string/menu_disable_unread_alert_status_simple_alert" />
        <item
            android:id="@+id/disable_unread_alert_status_email"
            android:title="@string/menu_disable_unread_alert_status_email" />
        <item
            android:id="@+id/disable_unread_alert_status_news"
            android:title="@string/menu_disable_unread_alert_status_news" />
        <item
            android:id="@+id/disable_unread_alert_status_call"
            android:title="@string/menu_disable_unread_alert_status_call" />
        <item
            android:id="@+id/disable_unread_alert_status_missed_call"
            android:title="@string/menu_disable_unread_alert_status_missed_call" />
        <item
            android:id="@+id/disable_unread_alert_status_sms_mms"
            android:title="@string/menu_disable_unread_alert_status_sms_mms" />
        <item
            android:id="@+id/disable_unread_alert_status_voice_mail"
            android:title="@string/menu_disable_unread_alert_status_voice_mail" />
        <item
            android:id="@+id/disable_unread_alert_status_schedule"
            android:title="@string/menu_disable_unread_alert_status_schedule" />
        <item
            android:id="@+id/disable_unread_alert_status_high_prioritized"
            android:title="@string/menu_disable_unread_alert_status_high_prioritized" />
        <item
            android:id="@+id/disable_unread_alert_status_instant_message"
            android:title="@string/menu_disable_unread_alert_status_instant_message" />
        <item
            android:id="@+id/disable_unread_alert_status_all"
            android:title="@string/menu_disable_unread_alert_status_all" />
    </group>
    <group
        android:id="@+id/na_control"
        android:visible="true">
        <item
            android:id="@+id/notify_new_alert_simple_alert"
            android:title="@string/menu_notify_new_alert_simple_alert" />
        <item
            android:id="@+id/notify_new_alert_email"
            android:title="@string/menu_notify_new_alert_email" />
        <item
            android:id="@+id/notify_new_alert_news"
            android:title="@string/menu_notify_new_alert_news" />
        <item
            android:id="@+id/notify_new_alert_call"
            android:title="@string/menu_notify_new_alert_call" />
        <item
            android:id="@+id/notify_new_alert_missed_call"
            android:title="@string/menu_notify_new_alert_missed_call" />
        <item
            android:id="@+id/notify_new_alert_sms_mms"
            android:title="@string/menu_notify_new_alert_sms_mms" />
        <item
            android:id="@+id/notify_new_alert_voice_mail"
            android:title="@string/menu_notify_new_alert_voice_mail" />
        <item
            android:id="@+id/notify_new_alert_schedule"
            android:title="@string/menu_notify_new_alert_schedule" />
        <item
            android:id="@+id/notify_new_alert_high_prioritized"
            android:title="@string/menu_notify_new_alert_high_prioritized" />
        <item
            android:id="@+id/notify_new_alert_instant_message"
            android:title="@string/menu_notify_new_alert_instant_message" />
        <item
            android:id="@+id/notify_new_alert_all"
            android:title="@string/menu_notify_new_alert_all" />
    </group>
    <group
        android:id="@+id/uas_control"
        android:visible="true">
        <item
            android:id="@+id/notify_unread_alert_status_simple_alert"
            android:title="@string/menu_notify_unread_alert_status_simple_alert" />
        <item
            android:id="@+id/notify_unread_alert_status_email"
            android:title="@string/menu_notify_unread_alert_status_email" />
        <item
            android:id="@+id/notify_unread_alert_status_news"
            android:title="@string/menu_notify_unread_alert_status_news" />
        <item
            android:id="@+id/notify_unread_alert_status_call"
            android:title="@string/menu_notify_unread_alert_status_call" />
        <item
            android:id="@+id/notify_unread_alert_status_missed_call"
            android:title="@string/menu_notify_unread_alert_status_missed_call" />
        <item
            android:id="@+id/notify_unread_alert_status_sms_mms"
            android:title="@string/menu_notify_unread_alert_status_sms_mms" />
        <item
            android:id="@+id/notify_unread_alert_status_voice_mail"
            android:title="@string/menu_notify_unread_alert_status_voice_mail" />
        <item
            android:id="@+id/notify_unread_alert_status_schedule"
            android:title="@string/menu_notify_unread_alert_status_schedule" />
        <item
            android:id="@+id/notify_unread_alert_status_high_prioritized"
            android:title="@string/menu_notify_unread_alert_status_high_prioritized" />
        <item
            android:id="@+id/notify_unread_alert_status_instant_message"
            android:title="@string/menu_notify_unread_alert_status_instant_message" />
        <item
            android:id="@+id/notify_unread_alert_status_all"
            android:title="@string/menu_notify_unread_alert_status_all" />
    </group>
</menu>